examples/test/testpolicy8384.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8384
  namespace: namespace151
spec:
  podSelector:
    matchLabels:
      key29: value21
      key18: value4
      key13: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value31
      podSelector:
        matchLabels:
          key17: value42
          key24: value8
